--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <p id="money">$117,200,000,000</p>
     </div>
     <div id="items"></div>
+    <div id="receipt"></div>
     <p id="last">That's all! <a href="https://igsaeg.github.io">Try other games</a></p>
 
     <script src="script/script.js"></script>
